--- a/styles/globals.css
+++ b/styles/globals.css
@@ -4,6 +4,7 @@ body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
     Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+   
 }
 
 a {
@@ -15,16 +16,19 @@ a {
   box-sizing: border-box;
 }
 
+/* --------- Navagation Bootsrap Customization -------- */
 
-.dropdown-item:hover
+/* .dropdown-item:hover, .MuiListItem-button:hover
 {
   color: rgb(130, 0, 252) !important;
-}
+  background-color: rgb(248, 240, 255) !important;
+} */
 
 /* Active BG */
-.dropdown-menu .active, .dropdown-menu .dropdown-item.active, .dropdown-item:active
+.dropdown-menu .active, .dropdown-menu .dropdown-item.active, .dropdown-item:active,
+.dropdown-item:hover, .MuiListItem-button:hover,.MuiListItem-button:active,
+.MuiListItem-root.Mui-selected
 {
-
   background-color: rgb(248, 240, 255) !important;
   color: rgb(130, 0, 252) !important;
 }
@@ -39,15 +43,53 @@ a {
   color: rgb(130, 0, 252) !important;
 }
 
+.navbar-nav .dropdown-menu {
+
+  padding: 10px;
+  text-transform: uppercase;
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+  color: rgb(230, 194, 140);
+}
 
 @media screen and (min-width: 768px) {
 
-  .nav-item.dropdown:hover .dropdown-menu 
+  .nav-item.dropdown:hover .dropdown-menu
   {
-  display: block;
-  margin-top: -5px;
-  color: rgb(230, 194, 140);
+  display: block; 
   }
+  .nav-item.dropdown .dropdown-menu{
+    margin-top: -5px;   
+    
+  }
+
   
-  
+  .imgHeight {
+    height: 90vh;
+  }
+}
+
+
+/* ---- Form --- */
+
+.MuiFormLabel-asterisk, .MuiInputLabel-asterisk {
+  color: red !important;
+}
+
+
+label.MuiFormLabel-root.MuiInputLabel-root.MuiInputLabel-formControl.MuiInputLabel-animated.MuiInputLabel-outlined.Mui-required.Mui-required {
+  background: white;
+  padding-left: 10px;
+  padding-right: 10px;
+  /* background-clip: padding-box; */
+}
+
+label.MuiFormLabel-root.MuiInputLabel-root.MuiInputLabel-formControl.MuiInputLabel-animated {
+  background: white;
+  padding-left: 10px;
+  padding-right: 10px;
+  /* background-clip: padding-box; */
+}
+
+.MuiSelect-select:focus {
+  background-color: #fff !important;
 }
