--- a/styles/globals.css
+++ b/styles/globals.css
@@ -4,6 +4,8 @@ body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
     Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+    overflow-x: hidden;
+ 
    
 }
 
@@ -51,7 +53,10 @@ a {
   color: rgb(230, 194, 140);
 }
 
-@media screen and (min-width: 768px) {
+@media only screen and (min-width: 1025px)
+  /* ,(min-width: 769px) */
+
+{
 
   .nav-item.dropdown:hover .dropdown-menu
   {
@@ -66,8 +71,23 @@ a {
   .imgHeight {
     height: 90vh;
   }
+
+
 }
 
+/* Remove Menu Bar Outline */
+@media screen and (max-width: 768px) {
+  .navbar-light .navbar-toggler {
+    color: transparent !important;}
+
+}
+
+@media screen and (max-width: 1300px) {
+
+  .navbar-collapse {
+    margin-right: 5% !important;
+  }
+}
 
 /* ---- Form --- */
 
