--- a/components/form/form.module.css
+++ b/components/form/form.module.css
@@ -13,6 +13,32 @@
     min-width: 100% !important;
 }
 
+
+  @keyframes slideInFromBottom {
+    100% {
+      transform: translateY(0%);
+    }
+    0% {
+      transform: translateY(100%);
+    }
+  }
+  
+  .transContact {  
+    /* This section calls the slideInFromLeft animation we defined above */
+    /* animation: 1s ease-out 0s 1 slideInFromLeft; */
+ 
+  animation-name: slideInFromBottom;
+  animation-duration: 0.6s;
+  animation-timing-function: ease-out;
+  animation-delay: 0s;
+  animation-iteration-count: 1;
+  /* animation-direction: reverse;   */
+  /* animation-direction: alternate; */
+   
+  }
+
+
+
 @media screen and (max-width: 768px) {
 
   
