--- a/styles/globals.css
+++ b/styles/globals.css
@@ -152,3 +152,16 @@ input:-webkit-autofill:active
 a {
   text-decoration: none !important;
 }
+
+
+
+
+#navbar {
+  /* background-color: #333; */
+  position: sticky;
+  top: 0;
+  width: 100%;
+  display: block;
+  transition: top 0.6s;
+  z-index: 1020;
+}
